--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "twitter-poc",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.20.2",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-infinite-scroller": "^1.2.1",
     "react-scripts": "1.1.4",
     "styled-components": "^3.4.6"
   },
@@ -15,5 +17,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
